--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-gunicorn==20.0.4
 blis==0.4.1
 catalogue==1.0.0
 certifi==2020.4.5.1
@@ -6,7 +5,9 @@ chardet==3.0.4
 click==7.1.1
 cymem==2.0.3
 emoji==0.5.4
+en-core-web-sm==2.2.0
 Flask==1.1.2
+gunicorn==20.0.4
 idna==2.9
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
@@ -30,7 +31,7 @@ srsly==1.0.2
 thinc==7.4.0
 tqdm==4.45.0
 urllib3==1.25.9
-vader-sentiment==3.2.1.1
+vaderSentiment==3.3.1
 wasabi==0.6.0
 Werkzeug==1.0.1
 xgboost==1.0.2
